fix example img too small

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,10 +40,10 @@ body,html {
   // Style as needed
 }
 .loginImgPanel {
-  width: 90%;
-  max-width: 500px; // Limit image size
+  // width: 90%;
+  // max-width: 1500px; // Limit image size
   img {
-    max-width: 100%;
+    // max-width: 100%;
     height: auto;
     border: 1px solid #555;
   }
